# Smart_LED

./: .gitignore  CMakeLists.txt  README.md
components/mqtt_protocl_lib/: CMakeLists.txt
components/mqtt_protocl_lib/include/: mqtt_client_api.h  mqtt_parser.h  mqtt_protocol.h  mqtt_util.h
components/mqtt_protocl_lib/src/: mqtt_client_api.c  mqtt_parser.c  mqtt_util.c
main/: CMakeLists.txt  led_strip_example_main.c
main/include/: smart_led_mqtt.h
main/src/: led_strip_example_main.c  smart_led_main.c  smart_led_mqtt.c
scripts/: generate_env_header.py
